tenzir/tests/exec/expr/escape/out_of_range.tql
// error

from {
  x: "\u{120301230123}",
}
